Make emoji 📂 on folder pages (quirk is no more -), recentnotes date inline block to fix spacing, randomize title on each new version

--- a/quartz/components/styles/recentNotes.scss
+++ b/quartz/components/styles/recentNotes.scss
@@ -32,6 +32,7 @@
   font-size: 0.85rem;
   opacity: 0.5;
   white-space: pre;
+  display: inline-block;
 }
 
 .external-icon {
